// Copyright (c) 2026 dilocash
// Use of this source code is governed by an MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package dilocash.v1;

option go_package = "github.com/dilocash/dilocash-oss/internal/transport/dilocash/v1;v1";

import "dilocash/v1/transaction_types.proto";

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}
